@@ -1,5 +1,4 @@
 - @recent = Activity.for(@current_user).recent
-- logger.p @recent.inspect
 .panel#recently
   .caption Recent Items
   - unless @recent.empty?
