@@ -4,6 +4,14 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Tue, Apr 14, 2009
+---------------------------------------------------------------------
+- Fixed missing uuid generation caused by observing models.
+
+Mon, Apr 13, 2009
+---------------------------------------------------------------------
+- Harv Ecker is up in San Francisco tonight.
+
 Sun, Apr 12, 2009
 ---------------------------------------------------------------------
 - Initial implementation of recently visited items.
